<resources>
    <string name="app_name">BeyondBarriersMart</string>
    <string name="category_page_name">Category</string>
    <string name="product_page_name">Product</string>
    <string name="category_title">Category Page</string>
    <string name="categories_legend">Categories</string>
    <string name="search_bar_hint">Search for an item</string>
    <string name="fashion_btn">Fashion</string>
    <string name="sports_btn">Sports</string>
    <string name="daily_btn">Daily</string>
    <string name="electronics_btn">Electronics</string>
    <string name="entertainment_btn">Entertainment</string>
    <string name="food_btn">Food</string>
    <string name="books_btn">Books</string>
    <string name="decorative_btn">Decorative</string>
    <string name="category_item_name">Item Name</string>
    <string name="category_item_price">RM 0.00</string>
    <string-array name="product_filter_group">
        <item>Latest release</item>
        <item>Most sold</item>
        <item>Price(lowest to high)</item>
        <item>Price(highest to low)</item>
    </string-array>
    <string name="product_page_title">Product Page</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="popular_review">Popular Review</string>
    <string name="related_products">Related Products</string>
    <string name="seller">Seller:</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">RM 0.00</string>
    <string name="number_rating">0.0 Rating over 0 users</string>
    <string name="item_desc">This is the item description</string>
    <string name="seller_name">Seller Name</string>
    <string name="reviewer_name">Reviewer Name</string>
    <string name="review_desc">This is the review description</string>
    <string name="quantity_amt">Quantity: </string>
    <string name="quantity_number">1</string>
    <string name="plus_sign_btn">+</string>
    <string name="minus_sign_btn">-</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addproduct_title">Add Product</string>
    <string name="insert_img_desc">Insert Image</string>
    <string name="product_name_textview">Product Name</string>
    <string name="enter_product_name_ph">Enter Product Name</string>
    <string name="product_desc_textview">Product Description</string>
    <string name="enter_price_ph">Enter Price</string>
    <string name="product_price_textview">Product Price</string>
    <string name="product_stock_textview">Product Stock</string>
    <string name="product_category_textview">Product Category</string>
    <string name="enter_product_desc_ph">Enter Product Description</string>
    <string name="enter_stock_ph">Enter Stock</string>
    <string name="ship_option_cb_text">I require external shipment services to ship my items.</string>
    <string name="add_product_button_text">Add Product</string>
    <string-array name="category_group">
        <item>Fashion</item>
        <item>Sports</item>
        <item>Daily</item>
        <item>Electronics</item>
        <item>Entertainment</item>
        <item>Food</item>
        <item>Books</item>
        <item>Decorative</item>
    </string-array>
    <string-array name="month_group">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="year_group">
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>
    <string name="title_activity_spending_chart">SpendingChartActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="highest_spending_textview">Your Highest Spending Day This Month</string>
    <string name="highest_spending_amt_textview">Loading...</string>
    <string name="total_spending_textview">Your Total Spending This Month</string>
    <string name="total_spending_amt_textview">Loading...</string>
    <string name="set_spending_limit_textview">Set Spending Limit</string>
    <string name="set_spending_limit_text">1000.00</string>
    <string name="spending_limit_reach_cb_text">Stop payments if spending limit is reached.</string>
    <string name="warn_spending_limit_cb_text">Warn me if I am close to spending limit.</string>
    <string name="spending_chart_title">Spending Chart</string>
    <string name="seller_products_title">Seller Products</string>
    <string name="seller_product_name_textview">Product Name 1</string>
    <string name="seller_product_stock_textview">Stock : N/A</string>
    <string name="seller_product_sold_textview">Sold : N/A</string>
    <string name="seller_product_rating_textview">Average Rating : N/A</string>
    <string name="seller_product_cost_textview">Cost : N/A</string>
    <string name="delist_button_text">De-list</string>
    <string name="cartTitle">Cart</string>
    <string name="cartItemNumber">Items in Cart: N/A</string>
    <string name="clearCartText">Clear Cart</string>
    <string name="cartTotalPrice">Total: RMX.XX</string>
    <string name="cartCheckoutButton">Proceed to Checkout</string>
    <string name="checkoutTitle">Checkout</string>
    <string name="savedPaymentMethodText">Saved Payment Methods</string>
    <string name="paymentMethod1">Visa 4875 XXXX XXXX XXXX</string>
    <string name="addPaymentMethodText"><![CDATA[Add Payment Method >]]></string>
    <string name="savedAddressText">Saved Address</string>
    <string name="address1">St. Street, 5, State Garden, LA</string>
    <string name="addAddressText"><![CDATA[Add Address >]]></string>
    <string name="orderSummaryText">Order Summary</string>
    <string name="checkoutBackButton">Back</string>
    <string name="checkoutProceedButton">Proceed</string>
    <string name="orderSummaryName">Name</string>
    <string name="orderSummaryCost">Cost</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login">Login</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_seller">I want to register as a seller instead</string>
    <string name="welcome_seller">Welcome new seller!</string>
    <string name="seller_description">We only offer selling services to those in need. Please provide evidence upon registration.\n\nStart your journey now!</string>
    <string name="register_buyer">I want to register as a buyer instead</string>
    <string name="welcome_user">Welcome new user!</string>
    <string name="user_description">Purchasing products in this app will directly pay for the services of people who are in need.</string>
    <string name="username">Username</string>
    <string name="accountName">AccountName</string>
    <string name="email">Email</string>
    <string name="email_sample">sample@gmail.com</string>
    <string name="retype_password">Retype Password</string>
    <string name="oku_cert">OKU Certificate</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_sample">+60111111111</string>
    <string name="birth_date">Date of Birth</string>
    <string name="birth_date_sample">DD-MM-YYYY</string>
    <string name="bank_name">Bank Name</string>
    <string name="card_no">Card Number</string>
    <string name="upload_file">Upload File</string>
    <string-array name="bank_names">
        <item>Public Bank</item>
        <item>MayBank</item>
        <item>CIMB</item>
        <item>Hong Leong</item>
        <item>AmBank</item>
    </string-array>
    <string name="profile">Profile</string>
    <string name="username_sample">User5432</string>
    <string name="last_purchase">Last Purchase:</string>
    <string name="last_purchase_time_sample">69 minute(s) ago</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="saved_payment_methods">Saved Payment Methods</string>
    <string name="edit_payment_method">Edit Payment Method ></string>
    <string name="credit_card_type_sample">Visa</string>
    <string name="credit_card_number_sample">4567 XXXX XXXX XXXX</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="address_sample">St.Street 5, State Street, 4000, Cities</string>
    <string name="edit_address">Edit Address ></string>
    <string name="history">History</string>
    <string name="history_sample1">1) 22/3/2021</string>
    <string name="history_sample2">2) 22/4/2021</string>
    <string name="history_sample3">3) 25/6/2021</string>
    <string name="history_amount_sample1">RM4.30</string>
    <string name="history_amount_sample2">RM10.20</string>
    <string name="history_amount_sample3">RM420.69</string>
    <string name="view_further_tap_bar">To view further item details, tap on the bar.</string>
    <string name="view_spending_chart">View Spending Chart</string>
    <string name="view_ongoing_deliveries">View Ongoing Deliveries</string>
    <string name="addMyProductButton">Add Product</string>
    <string name="seller_profile">Seller Profile</string>
    <string name="view_my_products">View My Products</string>
    <string name="add_product">Add Product</string>
    <string name="orders_received">Orders Received</string>
    <string name="product_info">Product Info</string>
    <string name="amount">Amount</string>
    <string name="order_date">Order Date</string>
    <string name="seller_name_sample">Joe Mahma</string>
    <string name="seller_order_item_name_sample">Beanie Dark Grey</string>
    <string name="seller_order_item_date_sample">20/1/2023</string>
    <string name="seller_order_item_amount_sample">69</string>
    <string name="seller_order_item_status_sample">Return</string>
    <string name="seller_order_item_address_sample">Kimberly 234, Mask Street, California, 4000 New Order</string>
    <string name="address">Address</string>
    <string name="mark_as_done">Mark As Done</string>
    <string name="refresh_button_text">Refresh</string>
    <string name="empty_username">Username can\'t be empty</string>
    <string name="taken_username">This username is taken</string>
    <string name="empty_email">Email can\'t be empty</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="empty_password">Please enter a password</string>
    <string name="taken_password">This password is taken</string>
    <string name="not_same_password">Passwords do not match</string>
    <string name="empty_phone_number">Phone number can\'t be empty</string>
    <string name="invalid_phone_number">Please enter a valid phone number</string>
    <string name="underage">Only 18 and above users are allowed to register</string>
</resources>