<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddProductsFragment">

<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp"
        tools:context=".AddProductsFragment">


        <ImageButton
            android:id="@+id/addPhotoImgButton"
            android:layout_width="140dp"
            android:layout_height="126dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="200dp"
            android:contentDescription="@string/insert_img_desc"
            android:src="@android:drawable/ic_menu_camera"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/enterProductNameText"
            android:layout_width="180dp"
            android:layout_height="49dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/enter_product_name_ph"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.406"
            app:layout_constraintStart_toEndOf="@+id/addPhotoImgButton"
            app:layout_constraintTop_toBottomOf="@+id/productNameTextView" />

        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/product_name_textview"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.168"
            app:layout_constraintStart_toEndOf="@+id/addPhotoImgButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/productDescTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/product_desc_textview"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPhotoImgButton" />

        <TextView
            android:id="@+id/productPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:text="@string/product_price_textview"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/enterPriceText"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterProductDescText" />

        <TextView
            android:id="@+id/productStockTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="36dp"
            android:text="@string/product_stock_textview"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/enterStockText"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productPriceTextView" />

        <TextView
            android:id="@+id/productCategoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="36dp"
            android:text="@string/product_category_textview"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/categorySpinner"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productStockTextView" />

        <EditText
            android:id="@+id/enterProductDescText"
            android:layout_width="355dp"
            android:layout_height="119dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/enter_product_desc_ph"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productDescTextView" />

        <EditText
            android:id="@+id/enterStockText"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/enter_stock_ph"
            android:inputType="number"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.855"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterPriceText" />

        <EditText
            android:id="@+id/enterPriceText"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/enter_price_ph"
            android:inputType="numberDecimal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.855"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterProductDescText" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:entries="@array/category_group"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:scrollbarSize="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.855"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterStockText" />

        <CheckBox
            android:id="@+id/shipServiceRequiredCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/ship_option_cb_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

        <Button
            android:id="@+id/addProductButton"
            android:layout_width="154dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_product_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shipServiceRequiredCb" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    
</ScrollView>

    <FrameLayout
        android:id="@+id/add_products_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
    <!--        android:id="@+id/bottomNavigationView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="75dp"-->
    <!--        android:background="#FFFFFF"-->
    <!--        app:elevation="8dp"-->
    <!--        app:itemBackground="@color/main_theme_color"-->
    <!--        app:itemIconTint="@color/white"-->
    <!--        app:itemPaddingBottom="20dp"-->
    <!--        app:itemPaddingTop="20dp"-->
    <!--        app:itemTextColor="@color/white"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:menu="@menu/bottom_nav_menu" />-->

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/main_theme_color"
        android:fontFamily="sans-serif-black"
        android:paddingTop="10dp"
        android:text="@string/addproduct_title"
        android:textAlignment="center"
        android:textColor="#C5CFF3"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>