<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartFragment" >

    <TextView
        android:id="@+id/cartTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/main_theme_color"
        android:fontFamily="sans-serif-black"
        android:paddingTop="10dp"
        android:text="@string/cartTitle"
        android:textAlignment="center"
        android:textColor="#C5CFF3"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartItemNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/cartItemNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartTitle" />

    <Button
        android:id="@+id/clearCartButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/clearCartText"
        app:layout_constraintBottom_toBottomOf="@+id/cartItemNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cartItemNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>